--- a/Backend/CourierManagementSystem/src/main/resources/application.properties
+++ b/Backend/CourierManagementSystem/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=Artoon7594#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
