--- a/Backend/CourierManagementSystem/src/main/resources/application.properties
+++ b/Backend/CourierManagementSystem/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 #spring.security.user.name=admin
 #spring.security.user.password=admin123
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8180/realms/master/protocol/openid-connect/certs
