fixed microservices issue. -> down version

--- a/Backend/Microservices/apiGateway/src/main/resources/application.properties
+++ b/Backend/Microservices/apiGateway/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.application.name=ApiGateway
+spring.application.name=apiGateway
 server.port=8083
 
-#routes configuration
+
+#routes  configuration
+
 spring.cloud.gateway.routes[0].id=QuizService
 spring.cloud.gateway.routes[0].uri=lb://QuizService
-spring.cloud.gateway.routes[0].predicates[0]=Path=/quiz/**, /quiz-test/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/quiz/**
+
+
 
